# ztf-viewer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  akb.py  anomalies.py  app.py  cache.py  config.py  cross.py  data.py  db.py  docker-compose-dev.yml  docker-compose.dev.local.yml  docker-compose.dev.yml  docker-compose.yml  importer.py  login.py  main.py  products.py  pyproject.toml  requirements.txt  search.py  secret.py  setup.cfg  snad_catalog.py  tags.py  update_snad_catalog.sh  util.py  viewer.py
.ci/: Dockerfile_test  docker-compose.yml.tmpl
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  deploy-dev.yml  test.yml
assets/: 20-aladin.min.js  style.css
data/: snad_catalog.csv
proxy/: default.conf
proxy-cache-filler/: Dockerfile  proxy_cache_filler.py
static/js/: aladin_helper.js  js9_helper.js  js9prefs.js
tests/: conftest.py  test_ttl_set_local_ttl_set.py  test_ttl_set_redis_ttl_set.py  test_ttl_set_redis_ttl_string_set.py
tests/catalogs/: test_skybot.py  test_ztf_ref.py
tests/catalogs/conesearch/: test_alerce.py  test_antares.py  test_otter.py  test_panstarrs.py  test_tns.py
ztf_viewer/: __main__.py  akb.py  anomalies.py  app.py  brokers.py  cache.py  config.py  cross.py  date_with_frac.py  exceptions.py  figures.py  importer.py  lc_features.py  login.py  model_fit.py  plot_data.py  products.py  search.py  snad_catalog.py  ttl_set.py  util.py  version.py  viewer.py
ztf_viewer/assets/: aladin.min.css  style.css
ztf_viewer/catalogs/: __init__.py  skybot.py  unavailable_catalogs.py  vizier.py  ztf.py  ztf_dr.py  ztf_ref.py
ztf_viewer/catalogs/conesearch/: __init__.py  _base.py  alerce.py  antares.py  astrocats.py  atlas.py  colibri.py  fink.py  gaia2dis.py  gaia_dr3.py  gaia_edr3_dis.py  gcvs.py  ogle.py  otter.py  panstarrs.py  sdss.py  simbad.py  spicy.py  tns.py  vsx.py  ztf_periodic.py
ztf_viewer/catalogs/extinction/: __init__.py  _base.py  bayestar.py  csfd.py  sfd.py
ztf_viewer/catalogs/snad/: __init__.py  catalog.py
ztf_viewer/catalogs/snad/data/: snad_catalog.csv
ztf_viewer/lc_data/: __init__.py  antares.py  arbitrary.py  external.py  plot_data.py  ztf_dr.py
ztf_viewer/pages/: akb_table.py  favicon.py  figure.py  lc_csv.py  login.py  search.py  tags.py  viewer.py
ztf_viewer/static/js/: aladin_helper.js  js9prefs.js
