[project]
name = "ztf_viewer"
version = "2023.5.0"
authors = [
  {email = "hombit@gmail.com"},
  {name = "Konstantin Malanchev"}
]
description = "ZTF data releases viewer"
readme = "README.md"
license = {text = "MIT"}
keywords = ["science", "astrophysics"]
requires-python = ">=3.9"
dependencies = [
    "dash>=2.3.1",
    "dash_defer_js_import",
    "dash-dangerously-set-inner-html",
    "ipywidgets>=7.0.0", # needed by plotly
    "orjson",
    "flask",
    "pandas",
    "numpy",
    "astropy",
    "astroquery",
    "jinja2",
    "requests",
    "redis",
    "redis-lru",
    "matplotlib>=3.3",
    "cachetools",
    "scipy",
    "immutabledict",
    "alerce",
    # supports astropy 5
    "dustmaps>=1.0.10",
    "antares-client>=1.2.0",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-redis',
]

[project.urls]
homepage = "ztf.snad.space"
repository = "github.com/snad-space/ztf_viewer"
changelog = "github.com/snad-space/ztf_viewer/blob/master/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.py$'

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
# F401: imported but unused
"ztf_viewer/catalogs/__init__.py" = ["F401"]
"ztf_viewer/catalogs/extinction/__init__.py" = ["F401"]
"ztf_viewer/catalogs/snad/__init__.py" = ["F401"]
"ztf_viewer/importer.py" = ["F401"]
"ztf_viewer/lc_data/__init__.py" = ["F401"]
