[metadata]
name = snad-ztf-viewer
version = 0.1.0
author = Konstantin Malanchev
author_email = 'hombit@gmail.com'
description = ZTF data releases viewer
long_description = file: README.md
url = 'https://ztf.snad.space'
license = MIT
keywords = science, astrophysics
classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
include_package_data = True
install_requires =
    dash
    dash_defer_js_import
    dash-dangerously-set-inner-html
    flask
    pandas
    numpy
    astropy
    astroquery
    jinja2
    requests
    redis
    redis-lru
    ipywidgets>=7.0.0
    matplotlib>=3.3,<4.0
    cachetools
    scipy
    immutabledict
    alerce
    dustmaps
