[metadata]
name = snad-ztf-viewer
# version schema is yyyy.mm.num_release
version = 2022.04.0
author = Konstantin Malanchev
author_email = 'hombit@gmail.com'
description = ZTF data releases viewer
long_description = file: README.md
url = 'https://ztf.snad.space'
license = MIT
keywords = science, astrophysics
classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
include_package_data = True
install_requires =
    dash>=2.3.1
    dash_defer_js_import
    dash-dangerously-set-inner-html
    orjson
    flask
    pandas
    numpy
    # astropy 5 is not supported by dustmaps https://github.com/gregreen/dustmaps/issues/37
    astropy<5
    astroquery
    jinja2
    requests
    redis
    redis-lru
    ipywidgets>=7.0.0
    matplotlib>=3.3,<4.0
    cachetools
    scipy
    immutabledict
    alerce
    dustmaps
    antares-client>=1.2.0
